--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
             </a-entity>
         </a-scene>
 
-        <!-- ///////////////////////// SCRIPTS
-/////////////////////////////////////////////// -->
         <script type="text/javascript">
 
             window.addEventListener('targetFound', function () {
                 var videoElement = document.getElementById("videoPlayer");
                 videoElement.play();
+            });
+
+            window.addEventListener('targetLost', function () {
+                var videoElement = document.getElementById("videoPlayer");
+                videoElement.load();
             });
 
             function init(){
