--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <small>
                 Atenção: 
                 <br>Esta funcionalidade e exclusiva para QR-Codes Markett. 
-                Você precisa autorizar o acesso a sua câmera, apenas para leitura.
+                Você precisa autorizar o acesso a sua câmera.
                 <br><br>
+                v0.3
                 <!--<button id="request-camera-access">Toque aqui para autorizar caso o pedido não apareça</button>-->
             </small>
             <a class="btn-alt" onclick="init()">OK!</a>
@@ -39,7 +40,7 @@
         </div>
 
         <a-scene 
-                 mindar-image="imageTargetSrc: default.mind; filterMinCF: 0.001; filterBeta: 0.001; warmupTolerance: 1"
+                 mindar-image="imageTargetSrc: target.mind; filterMinCF: 0.001; filterBeta: 0.001; warmupTolerance: 1"
                  color-space="sRGB" 
                  renderer="colorManagement: true, physicallyCorrectLights" 
                  vr-mode-ui="enabled: false" 
@@ -48,7 +49,7 @@
             <a-assets>
                 <video id="videoPlayer" 
                        loop="true" autoplay playsinline webkit-playsinline crossorigin="anonymous" muted="true"
-                       src="m-code.mp4">
+                       src="media/m-code.mp4">
                 </video>
             </a-assets>
 
