--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <title>M-CODE</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#CDFD02">
+        <meta name="theme-color" content="#222">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <link rel="icon" href="m-code.png" type="image/x-icon">
 
         <link rel="stylesheet" href="engine/style.css">
         <script src="engine/js/jquery.min.js"></script>
