--- a/qrcode.html
+++ b/qrcode.html
@@ -41,7 +41,7 @@
         </div>
 
         <a-scene 
-                 mindar-image="imageTargetSrc: mcode-target.mind; filterMinCF: 0.001; filterBeta: 0.001; warmupTolerance: 1"
+                 mindar-image="imageTargetSrc: qrcode-target.mind; filterMinCF: 0.001; filterBeta: 0.001; warmupTolerance: 1"
                  color-space="sRGB" 
                  renderer="colorManagement: true, physicallyCorrectLights" 
                  vr-mode-ui="enabled: false" 
