--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="engine/style.css">
         <script src="engine/js/jquery.min.js"></script>
-        <script src="engine/js/aframe.1.5.0.min.js"></script>
+            <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
         <script src="engine/js/mindar-image-aframe.prod.1.2.5.js"></script>
         <script src="engine/js/aframe-chromakey-material.min.js"></script>
         <script src="engine/js/aframe-extras.min.js"></script>
