--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 v0.3
                 <!--<button id="request-camera-access">Toque aqui para autorizar caso o pedido não apareça</button>-->
             </small>
-            <a class="btn-alt" onclick="init()">OK!</a>
+            <button class="btn-alt" onclick="init()">OK!</button>
         </div>
 
         <!-- ///////////////////////// 01
