--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <br>Esta funcionalidade e exclusiva para QR-Codes Markett.
             Você precisa autorizar o acesso a sua câmera.
             <br><br>
-            v0.5
+            v0.6
             <!--<button id="request-camera-access">Toque aqui para autorizar caso o pedido não apareça</button>-->
         </small>
         <button class="btn-alt" onclick="init()">OK!</button>
@@ -37,7 +37,7 @@
     <!-- ///////////////////////// 01
 /////////////////////////////////////////////// -->
     <div class="cta">
-        <a href="">Botão de Ação (CTA)</a>
+        <button>Botão de Ação (CTA)</button>
     </div>
 
     <a-scene mindar-image="imageTargetSrc: mcode-target.mind; filterMinCF: 0.001; filterBeta: 0.001; warmupTolerance: 1"
